--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-plotly
-pandas
-yfinance
+streamlit==1.29.0
+plotly==5.20.0
+pandas==2.1.0
+yfinance==0.2.35
 nsepython==0.1.61
-numpy
-matplotlib
-seaborn
-requests
-scikit-learn
+numpy==1.25.0
+matplotlib==3.8.0
+seaborn==0.13.2
+requests==2.32.0
+scikit-learn==1.3.1
