--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit==1.37.1
-plotly==5.20.0
-pandas==2.2.2
-yfinance==0.2.40
-numpy==1.26.4
-matplotlib==3.8.4
-requests==2.32.3
+streamlit
+yfinance
+plotly
+pandas
